--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@
     text-decoration: line-through;
 }
 
-ul.items{
-	display: inline-block;
+ul.items li{
+	list-style: none;
+	color:#FFFFFF;
 }
+
+h1{
+	color: #FFFFFF;
+}
+
+body{
+	background-color: #03A9F4;
+}
+
